--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
         "@types/node": "^13.13.9",
         "@types/node-fetch": "^2.5.7",
         "chai": "^4.2.0",
-        "dispatcher": "github:mattkenefick/dispatcher",
+        "dispatcher": "FrenchBully/dispatcher",
         "https": "^1.0.0",
         "lodash": "^4.17.15",
         "mocha": "^7.2.0",
